# math_operations

./: CMakeLists.txt  Makefile  calculable.cpp  main.cpp  tokens.h
apps/: CMakeLists.txt  main.cpp
include/: calculable.h  calculator.h
src/: CMakeLists.txt  calculable.cpp  calculator.cpp  tokens.cpp
test/: CMakeLists.txt  calculator_test.cpp  sample.cpp
